test/spec_vectors/array/fail/module_4.wat
(module (type (array (mut (ref 1)))))